refactor: update component structure, clean up styles, and remove unused files

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,10 +6,10 @@
   <div class="wrapper --flexcenter">
     <div class="contact__info">
       <div class="contact__phrase">
-        <p class="contact-title title">
+        <h3 class="contact-title title">
           <span class="asterisk">*</span>Ready to go<br />
           with the flow?
-        </p>
+        </h3>
       </div>
 
       <div class="contact__links">
@@ -73,8 +73,7 @@
     </div>
   </div>
 
-  <div class="brand last-brand">
-    <div data-splitting>HOT LAVA*</div>
+  <div class="brand last-brand"> 
   </div>
 </footer>
 
