--- a/src/components/sections/How.astro
+++ b/src/components/sections/How.astro
@@ -5,15 +5,15 @@
 <section class="how how-we-work" id="how-we-work">
   <div class="wrapper">
     <!-- Slide Intro -->
-    <div class="section__slide">
-      <h3 class="section__h3 title">
+    <div class="container">
+      <h3 class="title">
         <span class="asterisk">*</span>Here's how <br /> we flow.</span>
       </h3>
     </div> 
 
     <!-- Slide 1 -->
-    <div class="section__slide">
-      <h3 class="section__h3 title">Momentum begins with a strategic foundation.</h3>
+    <div class="container">
+      <h3 class="title">Momentum begins with a strategic foundation.</h3>
       <p class="section__p">
         <strong>One size will never, ever fit all:</strong><br />
         We don't believe in pre-packaged strategic solutions. Whether we're articulating a company's purpose or amplifying their competitive edge, our strategic approach will always flex to the business challenge. 
@@ -21,8 +21,8 @@
     </div>
 
     <!-- Slide 2 -->
-    <div class="section__slide">
-      <h3 class="section__h3 title">Ideas are measured by their fluidity.</h3>
+    <div class="container">
+      <h3 class="title">Ideas are measured by their fluidity.</h3>
       <p class="section__p">
         <strong>Our focus is on defining creative:</strong>
         We mine for ideas that flood our thoughts, ignite our emotions and build enough momentum to change the way we act. 
@@ -31,8 +31,8 @@
     </div>
 
     <!-- Slide 3 -->
-    <div class="section__slide">
-      <h3 class="section__h3 title">Flow is always-on production.</h3>
+    <div class="container">
+      <h3 class="title">Flow is always-on production.</h3>
       <p class="section__p">
         <strong>We've said "so long" to silos:</strong>
         Our production team is involved from the start, working with strategy and creative to guide projects from start to finish. Every production flows through our highly connected network of timely and talented creators.
