--- a/src/components/sections/Intro.astro
+++ b/src/components/sections/Intro.astro
@@ -4,16 +4,16 @@
 
 <section class="intro">
   <div class="wrapper">
-    <div class="section__slide">
-      <h3 class="section__h3 title title-intro">
+    <div class="container">
+      <h3 class="title title-intro">
         <span class="asterisk">*</span>This is our phrase<br />for epiphany.<br />
         We had one and<br />
         that&#8217;s why we&#8217;re here…
       </h3>
     </div>
 
-    <div class="section__slide">
-      <h3 class="section__h3 title title-second">
+    <div class="container">
+      <h3 class="title title-second">
         Ideas need to
         <br />flow more freely.
       </h3>
