--- a/src/components/sections/Works.astro
+++ b/src/components/sections/Works.astro
@@ -4,67 +4,70 @@
 
 <section id="work" class="work">
 
-  <div class="wrapper --flexbotm">
-    <div class="section__slide">
-      <h3 class="section__h3 title">
+  <div class="wrapper">
+    <div class="container">
+      <h3 class="title">
         <span class="asterisk">*</span>See what </br > we do.
       </h3>
     </div>
   </div>  
 
-  <div class="work__list">
+  <div class="wrapper">
 
-    <div class="work__container">
-      <div class="work__item js-work" data-slide="meijer">
-        <div class="name">
-          <p>*Meijer</p>
+    <div class="container">
+
+      <div class="work__container">
+        <div class="work__item js-work" data-slide="meijer">
+          <div class="name">
+            <p>Meijer</p>
+          </div>
+          <!-- <img src="./meijer/ice-cream.jpg" alt="Meijer"> -->
         </div>
-        <img src="./meijer/ice-cream.jpg" alt="Meijer">
       </div>
-    </div>
 
-    <div class="work__container">
-      <div class="work__item js-work" data-slide="frederiks">
-        <div class="name">
-          <p>*Frederik’s</p>
+      <div class="work__container">
+        <div class="work__item js-work" data-slide="frederiks">
+          <div class="name">
+            <p>Frederik’s</p>
+          </div>
+          <!-- <img src="./frederiks/pasta.jpg" alt="Frederik’s"> -->
         </div>
-        <img src="./frederiks/pasta.jpg" alt="Frederik’s">
       </div>
-    </div>
 
-    <div class="work__container">
-      <div class="work__item js-work" data-slide="dole-wiggles">
-        <div class="name">
-          <p>*Dole Wiggles</p>
+      <div class="work__container">
+        <div class="work__item js-work" data-slide="dole-wiggles">
+          <div class="name">
+            <p>Dole Wiggles</p>
+          </div>
+          <!-- <img src="./dole/wiggles/dance.jpg" alt="Dole Wiggles"> -->
         </div>
-        <img src="./dole/wiggles/dance.jpg" alt="Dole Wiggles">
       </div>
-    </div>
 
-    <div class="work__container">
-      <div class="work__item js-work" data-slide="fresh-thyme">
-        <div class="name">
-          <p>*Fresh Thyme</p>
+      <div class="work__container">
+        <div class="work__item js-work" data-slide="fresh-thyme">
+          <div class="name">
+            <p>Fresh Thyme</p>
+          </div>
+          <!-- <img src="./fresh-thyme/get-real-steak.jpg" alt="Fresh Thyme"> -->
         </div>
-        <img src="./fresh-thyme/get-real-steak.jpg" alt="Fresh Thyme">
       </div>
-    </div>
 
-    <div class="work__container">
-      <div class="work__item js-work" data-slide="buybuybaby">
-        <div class="name">
-          <p>*buybuyBABY</p>
+      <div class="work__container">
+        <div class="work__item js-work" data-slide="buybuybaby">
+          <div class="name">
+            <p>buybuyBABY</p>
+          </div>
+          <!-- <img src="./buybuybaby/manifesto.jpg" alt="buybuyBABY"> -->
         </div>
-        <img src="./buybuybaby/manifesto.jpg" alt="buybuyBABY">
       </div>
-    </div>
 
-    <div class="work__container">
-      <div class="work__item js-work" data-slide="dole-juice">
-        <div class="name">
-          <p>*Dole Juice</p>
+      <div class="work__container">
+        <div class="work__item js-work" data-slide="dole-juice">
+          <div class="name">
+            <p>Dole Juice</p>
+          </div>
+          <!-- <img src="./dole/juice/rebecca.jpg" alt="Dole Juice"> -->
         </div>
-        <img src="./dole/juice/rebecca.jpg" alt="Dole Juice">
       </div>
     </div>
     
