--- a/src/styles/scss/_vars.scss
+++ b/src/styles/scss/_vars.scss
@@ -30,4 +30,5 @@ $main-font-title: "inter", sans-serif;
     --color-darkBlue: #103B60;
     --color-white: #FFFFFF;
     --color-grey: #93A0AA;
+    --color-link: #fff;
 }
