--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -3,9 +3,9 @@
 ---
 
 <section id="about-us" class="about">
-  <div class="wrapper --flexbotm">
-    <div class="section__slide">
-      <h3 class="section__h3 title">
+  <div class="wrapper">
+    <div class="container">
+      <h3 class="title">
         <span class="asterisk">*</span>Flow starts with
         <br />the way we work.
       </h3>
@@ -14,77 +14,78 @@
         simply an extension of yours – with personal service, an agile approach,
         and effective, defining work.
       </p>
-    </div>
-  </div>
-
-  <div class="team">
-    <!-- Ben -->
-    <div class="team__card team__card--1">
-      <div class="team__bio">
-        <h3>Ben</h3>
-        <p>
-          Previously CMO for Ogilvy & Mather, and CSO at Leo Burnett, Ben is an
-          industry veteran who has made invaluable contributions to a diverse
-          portfolio of global brands.
-        </p>
-      </div>
-      <div class="team__pic">
-        <div class="team__blend">
-          <img class="bio-pic" src="/team/ben.jpg" alt="Ben" />
+    </div> 
+    <div class="container">
+      <div class="team">
+        <!-- Ben -->
+        <div class="team__card team__card--1">
+          <div class="team__bio">
+            <h3>Ben</h3>
+            <p>
+              Previously CMO for Ogilvy & Mather, and CSO at Leo Burnett, Ben is an
+              industry veteran who has made invaluable contributions to a diverse
+              portfolio of global brands.
+            </p>
+          </div>
+          <div class="team__pic">
+            <div class="team__blend">
+              <img class="bio-pic" src="/team/ben.jpg" alt="Ben" />
+            </div>
+          </div>
+        </div>
+    
+        <!-- Nik -->
+        <div class="team__card team__card--2">
+          <div class="team__bio">
+            <h3>Nik</h3>
+            <p>
+              Nik is an award-winning producer whose talent flexes to agency
+              operations. With global brand and agency experience, he goes above and
+              beyond in pursuit of excellence.
+            </p>
+          </div>
+          <div class="team__pic">
+            <div class="team__blend">
+              <img class="bio-pic" src="/team/nik.jpg" alt="Nik" />
+            </div>
+          </div>
+        </div>
+    
+        <!-- Phil -->
+        <div class="team__card team__card--3">
+          <div class="team__bio">
+            <h3>Phil</h3>
+            <p>
+              Phil&#8217;s thoughtful and boundary-pushing approach has resulted in
+              cohesive, impactful work for the world&#8217;s best brands, at the
+              best agencies in Chicago and NYC.
+            </p>
+          </div>
+          <div class="team__pic">
+            <div class="team__blend">
+              <img class="bio-pic" src="/team/phil.jpg" alt="Phil" />
+            </div>
+          </div>
+        </div>
+    
+        <!-- Kristi -->
+        <div class="team__card team__card--4">
+          <div class="team__bio">
+            <h3>Kristi</h3>
+            <p>
+              Kristi has 15+ years experience in writing, public relations, brand
+              strategy, building teams and creating highly effective work in CPG and
+              retail.
+            </p>
+          </div>
+          <div class="team__pic">
+            <div class="team__blend">
+              <img class="bio-pic" src="/team/kris.jpg" alt="Kristi" />
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-
-    <!-- Nik -->
-    <div class="team__card team__card--2">
-      <div class="team__bio">
-        <h3>Nik</h3>
-        <p>
-          Nik is an award-winning producer whose talent flexes to agency
-          operations. With global brand and agency experience, he goes above and
-          beyond in pursuit of excellence.
-        </p>
-      </div>
-      <div class="team__pic">
-        <div class="team__blend">
-          <img class="bio-pic" src="/team/nik.jpg" alt="Nik" />
-        </div>
-      </div>
-    </div>
-
-    <!-- Phil -->
-    <div class="team__card team__card--3">
-      <div class="team__bio">
-        <h3>Phil</h3>
-        <p>
-          Phil&#8217;s thoughtful and boundary-pushing approach has resulted in
-          cohesive, impactful work for the world&#8217;s best brands, at the
-          best agencies in Chicago and NYC.
-        </p>
-      </div>
-      <div class="team__pic">
-        <div class="team__blend">
-          <img class="bio-pic" src="/team/phil.jpg" alt="Phil" />
-        </div>
-      </div>
-    </div>
-
-    <!-- Kristi -->
-    <div class="team__card team__card--4">
-      <div class="team__bio">
-        <h3>Kristi</h3>
-        <p>
-          Kristi has 15+ years experience in writing, public relations, brand
-          strategy, building teams and creating highly effective work in CPG and
-          retail.
-        </p>
-      </div>
-      <div class="team__pic">
-        <div class="team__blend">
-          <img class="bio-pic" src="/team/kris.jpg" alt="Kristi" />
-        </div>
-      </div>
-    </div>
+    </div> 
   </div>
 </section>
 
