--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -36,8 +36,8 @@
     <meta property="twitter:image" content="https://www.hotlavaagency.com/share-hot-lava-agency.jpg" />
 
     <!-- Mobile App Meta -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
     <meta name="theme-color" content="#ffffff" />
     <!-- Vimeo Player API -->
     <script src="https://player.vimeo.com/api/player.js"></script>
