--- a/src/styles/scss/_about.scss
+++ b/src/styles/scss/_about.scss
@@ -1,137 +1,56 @@
-.about {
-  color: $color-aquaGreen;
+.about { 
   padding-bottom: 15vh;
 
-  @media (min-width: $change-layout) {
-    // height: 500vh;
+  @media (min-width: $change-layout) { 
     padding-bottom: 10vh;
   }
-
-  .section__p {
-    small {
-      color: $color-aquaGreen;
-      opacity: 1;
-    }
-  }
+ 
 }
 
-.team {
-  width: 400vw;
-
+.team { 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-
-  gap: 10vh;
-
-  margin: 2.5vh 0 0 0;
-
-  @media (min-width:$change-layout) {
-    flex-direction: row;
-    gap: 0;
-    margin: 0;
-    height: 100vh;
-    align-items: center;
-  }
+  gap: 0;
+ 
 }
 
-.team__card {
-  position: relative;
-  width: 100vw;
-  padding-bottom: 50vw;
-
-  @media (min-width:$landscape) {
-    padding-bottom: 10vw;
-  }
-
-  @media (min-width:$change-layout) {
-    width: 1200px;
-    height: auto;
-    padding-bottom: 0;
-
-    &:first-child {
-      margin-left: 5vw;
-    }
-  }
-
+.team__card { 
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 2rem; 
+  width: 100%;
 
   .team__pic {
     display: block;
     width: 100%;  
- 
-
-    // @media (min-width:$change-layout) {
-    //   width: 90%;
-    //   aspect-ratio: 3/2;
-    // }
+    max-width: 50vw;
   }
 
   .team__blend {
-    aspect-ratio: 3/2;
-    // background: $color-lightBlue;
-    // background: $color-orange;
-
-    overflow: hidden; 
-
-    @media (min-width:$change-layout) {
-      border-radius: 100vh;
-    }
-
+    aspect-ratio: 3/2; 
+    overflow: hidden;  
   }
 
   img {
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    // mix-blend-mode: multiply;  
-    pointer-events: none;
-
-    // opacity: 0;
+    object-fit: cover; 
+    pointer-events: none; 
   }
 }
 
-.team__bio {
-  // position: absolute;
-  // top: 52.5vw;
-  // left: 8%;
-  // width: fit-content;
-  // height: fit-content;
-  // z-index: 2;
-
-  padding: 0 2rem;
-
-
-  // @media (min-width:$change-layout) {
-  //   top: unset;
-  //   bottom: 15%;
-  //   left: 15%;
-  // }
-
-  h3 {
-    color: $color-white;
-    color: $color-aquaGreen;
-    font-size: clamp(48px, 15.5vw, 96px);
-    line-height: 1;
-    // color: $color-white;
-    margin: -2px 0 0 0;
-  }
+.team__bio { 
+  padding: 2rem 0;  
 
   p {
     width: 85%;
     max-width: 540px;
     min-height: 120px;
-    margin-top: 1.5rem;
-    // margin-top: 16px;
-
-    font-size: clamp(18px, 3vw, 20px);
-    line-height: 1.425;
-    // color: $color-aquaGreen;
-    color: $color-white;
-
-    @media (min-width:$change-layout) {
-      font-size: clamp(23px, 3vw, 23px);
-    }
+    margin-top: 1.5rem;  
   }
 }
