--- a/src/styles/scss/_contact.scss
+++ b/src/styles/scss/_contact.scss
@@ -2,12 +2,7 @@
   position: relative;
   overflow: hidden;
   padding-top: 20vh;
-  height: clamp(500px, 100vh, 1080px);
-
-  h3,
-  p {
-    color: $color-orange;
-  }
+  height: clamp(500px, 100vh, 1080px); 
 
   .wrapper {
     height: 120vh;
@@ -65,61 +60,7 @@
         }
       }
     }
-  }
-
-  .brand {
-    position: absolute;
-    bottom: -5px;
-    width: 100%;
-    z-index: 1;
-
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center;
- 
-    // .word:nth-child(3) {
-    //   span:nth-child(5) {
-    //     transform-origin: 50% 30%;
-    //     animation: rotateAsterisk 22s linear infinite;
-    //   }
-    // }
-
-    > div {
-      font-size: clamp(32px, 20vw, 142px);
-      font-weight: 900;
-      line-height: 0.8;
-      color: $color-orange;
-      text-wrap: nowrap;
-      white-space: nowrap;
-
-      transform: translateY(10%);
-      pointer-events: none;
-
-      @media (min-width: 420px) {
-        font-size: clamp(85px, 20vw, 282px);
-      }
-      @media (min-width: 580px) {
-        font-size: clamp(120px, 20vw, 280px);
-      }
-      @media (min-width: 780px) {
-        font-size: clamp(150px, 20vw, 325px);
-      }
-      @media (min-width: $change-layout) {
-        transform: translateY(12%);
-        font-size: clamp(160px, 22vw, 372px);
-      }
-    }
-
-    // @keyframes rotateAsterisk {
-    //   from {
-    //     transform: rotate(0deg);
-    //   }
-    //   to {
-    //     transform: rotate(360deg);
-    //   }
-    // }
-  }
+  } 
 }
 
 .contact__info {
@@ -141,35 +82,24 @@
 }
 
 .contact__phrase {
-  p {
-    font-size: clamp(42px, 6vw, 96px);
-    font-weight: 900;
-    line-height: 1.1;
+  span {
+    display: block;
 
-    span {
-      display: block;
-
-      &:nth-child(1) {
-        line-height: 0.85;
-      }
+    &:nth-child(1) {
+      line-height: 0.85;
     }
   }
 }
 
-.contact__links {
-  // width: 40%;
-
-  p {
-    font-size: clamp(21px, 2vw, 25px);
-    line-height: 1.35;
-
+.contact__links { 
+  p { 
     span {
       display: block;
     }
   }
 
   a {
-    color: $color-orange;
+    color: var(--color-link);
     text-decoration: none;
     transition: 0.35s;
 
