--- a/src/styles/scss/_html.scss
+++ b/src/styles/scss/_html.scss
@@ -41,23 +41,21 @@ h6,
   font-family: $main-font-title;
   font-style: normal;
 }
+ 
 
-.section__p,
-.slogan p,
-.contact__links p {
-  font-family: $main-font;
-  font-weight: normal;
-}
-
-h1,
-h3 {
+h1 {
   font-size: clamp(48px, 7vw, 120px);
   font-weight: 900;
   line-height: 1.1;
   letter-spacing: -0.01em;
 }
 
-h3 {
+h3 { 
+  font-size: clamp(48px, 15.5vw, 96px);
+  font-weight: 900;
+  line-height: 1.1;
+  letter-spacing: -0.01em;
+
   span {
     //display: block;
 
@@ -67,9 +65,17 @@ h3 {
   }
 }
 
-p {
+p { 
+  font-family: var(--font-main);
+  font-size: clamp(18px, 3vw, 20px);
   font-weight: 400;
+  line-height: 1.425;
+  letter-spacing: -0.01em;
   color: $color-white;
+
+  @media (min-width:$change-layout) {
+    font-size: clamp(18px, 3vw, 20px); 
+  } 
 }
 
 img {
