--- a/src/styles/scss/_intro.scss
+++ b/src/styles/scss/_intro.scss
@@ -7,7 +7,7 @@
     }
   }
 
-  .section__slide:nth-child(2) {
+  .container:nth-child(2) {
     padding: 14vh 0 5vh 0;
 
     @media (min-width: $change-layout) {
