refactor: streamline About section layout

--- a/src/components/sections/Intro.astro
+++ b/src/components/sections/Intro.astro
@@ -63,13 +63,13 @@
     }
   }
 
-  .intro-second {
+  .intro-second, 
+  .intro-third  {
     .container {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      justify-content: center;
-      gap: 7vh;
+      justify-content: center; 
     }
   }
   .intro-third {
