--- a/src/styles/scss/_html.scss
+++ b/src/styles/scss/_html.scss
@@ -55,14 +55,15 @@ h3 {
   font-weight: 900;
   line-height: 1.1;
   letter-spacing: -0.01em;
-
-  span {
-    //display: block;
-
-    &:nth-child(1) {
-      line-height: 0.85;
-    }
-  }
+  margin-bottom: 4rem !important;
+ 
+}
+h4 { 
+  font-size: clamp(32px, 7vw, 40px);
+  font-weight: 900;
+  line-height: 1.1;
+  letter-spacing: -0.01em; 
+ 
 }
 
 p { 
