refactor: enhance Footer and Shop sections layout, improve styles, and integrate Shopify buy button

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,19 +4,18 @@
 
 <footer id="contact" class="contact">
   <div class="wrapper">
-    <div class="container">
-      <div class="contact__info">
-        <div class="contact__phrase">
-          <h3 class="contact-title title">
-            <span class="asterisk">*</span>Ready to go<br />
-            with the flow?
-          </h3>
-        </div>
+    <div class="container"> 
+      <h3 class="title">
+        <span class="asterisk">*</span>Ready to go<br />
+        with the flow?
+      </h3>
+      
+      <div class="row">          
         <div class="contact__links">
-          <p class="section__p">
+          <p>
             Hot Lava! We'd love to show you what we can do. For inquiries, contact
           </p>
-          <p class="section__p">
+          <p>
             <a
               href="mailto:info@hotlavaagency.com"
               target="_blank"
@@ -69,9 +68,8 @@
               </svg>
             </a>
           </div>
-        </div> 
-      </div>
-
+        </div>
+      </div> 
     </div>
   </div>
 
