--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Hero from '../components/sections/Hero.astro';
 import Intro from '../components/sections/Intro.astro';
 import About from '../components/sections/About.astro'; 
 import Works from '../components/sections/Works.astro';
-// import Shop from '../components/sections/Shop.astro'; 
+import Shop from '../components/sections/Shop.astro'; 
 import '../styles/global.scss';
 ---
 
@@ -28,7 +28,7 @@ import '../styles/global.scss';
   <Intro />
   <About /> 
   <Works />
-  <!-- <Shop /> -->
+  <Shop />
   <Footer />
 
   <script>
