--- a/src/components/sections/Shop.astro
+++ b/src/components/sections/Shop.astro
@@ -3,53 +3,176 @@
 ---
 
 <section class="shop" id="shop">
-  <div class="wrapper">
-    <h2>Official Hot Lava Merch</h2>
-    <div id="collection-component-1745937952726"></div>
-    <script is:inline type="text/javascript">
-      /*<![CDATA[*/ (function () { var scriptURL =
-      'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';;
-      if (window.ShopifyBuy) { if (window.ShopifyBuy.UI) { ShopifyBuyInit(); }
-      else { loadScript(); } } else { loadScript(); } function loadScript() {
-      var script = document.createElement('script'); script.async = true;
-      script.src = scriptURL; (document.getElementsByTagName('head')[0] ||
-      document.getElementsByTagName('body')[0]).appendChild(script);
-      script.onload = ShopifyBuyInit; } function ShopifyBuyInit() { var client =
-      ShopifyBuy.buildClient({ domain: 'hotlavaagency.myshopify.com',
-      storefrontAccessToken: 'da186ee9dae63c435b0968808934bd0b', });
-      ShopifyBuy.UI.onReady(client).then(function (ui) {
-      ui.createComponent('collection', { id: '586370613521', node:
-      document.getElementById('collection-component-1745937952726'),
-      moneyFormat: '%24%7B%7Bamount%7D%7D', options: { "product": { "styles": {
-      "product": { "@media (min-width: 601px)": { "max-width": "calc(25% -
-      20px)", "margin-left": "20px", "margin-bottom": "50px", "width": "calc(25%
-      - 20px)" } }, "title": { "color": "#ffffff" }, "button": { ":hover": {
-      "background-color": "#0c4479" }, "background-color": "#072847", ":focus":
-      { "background-color": "#0c4479" } }, "price": { "color": "#ffffff" },
-      "compareAt": { "color": "#ffffff" }, "unitPrice": { "color": "#ffffff" }
-      }, "text": { "button": "Add to cart" } }, "productSet": { "styles": {
-      "products": { "@media (min-width: 601px)": { "margin-left": "-20px" } } }
-      }, "modalProduct": { "contents": { "img": false, "imgWithCarousel": true,
-      "button": false, "buttonWithQuantity": true }, "styles": { "product": {
-      "@media (min-width: 601px)": { "max-width": "100%", "margin-left": "0px",
-      "margin-bottom": "0px" } }, "button": { ":hover": { "background-color":
-      "#0c4479" }, "background-color": "#072847", ":focus": {
-      "background-color": "#0c4479" } }, "title": { "font-family": "Helvetica
-      Neue, sans-serif", "font-weight": "bold", "font-size": "26px", "color":
-      "#4c4c4c" }, "price": { "font-family": "Helvetica Neue, sans-serif",
-      "font-weight": "normal", "font-size": "18px", "color": "#4c4c4c" },
-      "compareAt": { "font-family": "Helvetica Neue, sans-serif", "font-weight":
-      "normal", "font-size": "15.299999999999999px", "color": "#4c4c4c" },
-      "unitPrice": { "font-family": "Helvetica Neue, sans-serif", "font-weight":
-      "normal", "font-size": "15.299999999999999px", "color": "#4c4c4c" } },
-      "text": { "button": "Add to cart" } }, "option": {}, "cart": { "styles": {
-      "button": { ":hover": { "background-color": "#0c4479" },
-      "background-color": "#072847", ":focus": { "background-color": "#0c4479" }
-      } }, "text": { "total": "Subtotal", "button": "Checkout" } }, "toggle": {
-      "styles": { "toggle": { "background-color": "#072847", ":hover": {
-      "background-color": "#0c4479" }, ":focus": { "background-color": "#0c4479"
-      } } } } }, }); }); } })(); /*]]>*/
-    </script>
+  <div class="shop__hero">
+    <img src="/images/shop.jpg" alt="Lava Shop">
   </div>
+  <div id="collection-component-1745937952726"></div>
+  <script is:inline type="text/javascript"> 
+      /*<![CDATA[*/
+      (function () {
+        var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';;
+        if (window.ShopifyBuy) {
+          if (window.ShopifyBuy.UI) {
+            ShopifyBuyInit();
+          } else {
+            loadScript();
+          }
+        } else {
+          loadScript();
+        }
+        function loadScript() {
+          var script = document.createElement('script');
+          script.async = true;
+          script.src = scriptURL;
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+          script.onload = ShopifyBuyInit;
+        }
+        function ShopifyBuyInit() {
+          var client = ShopifyBuy.buildClient({
+            domain: 'hotlavaagency.myshopify.com',
+            storefrontAccessToken: 'da186ee9dae63c435b0968808934bd0b',
+          });
+          ShopifyBuy.UI.onReady(client).then(function (ui) {
+            ui.createComponent('collection', {
+              id: '586370613521',
+              node: document.getElementById('collection-component-1745937952726'),
+              moneyFormat: '%24%7B%7Bamount%7D%7D',
+              options: {
+                "product": {
+                  "styles": {
+                    "product": {
+                      "@media (min-width: 601px)": {
+                        "max-width": "calc(25% - 20px)",
+                        "margin-left": "20px",
+                        "margin-bottom": "50px",
+                        "width": "calc(25% - 20px)"
+                      }
+                    },
+                    "title": {
+                      "color": "#ffffff"
+                    },
+                    "button": {
+                      ":hover": {
+                        "background-color": "#0c4479"
+                      },
+                      "background-color": "#072847",
+                      ":focus": {
+                        "background-color": "#0c4479"
+                      }
+                    },
+                    "price": {
+                      "color": "#ffffff"
+                    },
+                    "compareAt": {
+                      "color": "#ffffff"
+                    },
+                    "unitPrice": {
+                      "color": "#ffffff"
+                    }
+                  },
+                  "text": {
+                    "button": "Add to cart"
+                  }
+                },
+                "productSet": {
+                  "styles": {
+                    "products": {
+                      "@media (min-width: 601px)": {
+                        "margin-left": "-20px"
+                      }
+                    }
+                  }
+                },
+                "modalProduct": {
+                  "contents": {
+                    "img": false,
+                    "imgWithCarousel": true,
+                    "button": false,
+                    "buttonWithQuantity": true
+                  },
+                  "styles": {
+                    "product": {
+                      "@media (min-width: 601px)": {
+                        "max-width": "100%",
+                        "margin-left": "0px",
+                        "margin-bottom": "0px"
+                      }
+                    },
+                    "button": {
+                      ":hover": {
+                        "background-color": "#0c4479"
+                      },
+                      "background-color": "#072847",
+                      ":focus": {
+                        "background-color": "#0c4479"
+                      }
+                    },
+                    "title": {
+                      "font-family": "Helvetica Neue, sans-serif",
+                      "font-weight": "bold",
+                      "font-size": "26px",
+                      "color": "#4c4c4c"
+                    },
+                    "price": {
+                      "font-family": "Helvetica Neue, sans-serif",
+                      "font-weight": "normal",
+                      "font-size": "18px",
+                      "color": "#4c4c4c"
+                    },
+                    "compareAt": {
+                      "font-family": "Helvetica Neue, sans-serif",
+                      "font-weight": "normal",
+                      "font-size": "15.299999999999999px",
+                      "color": "#4c4c4c"
+                    },
+                    "unitPrice": {
+                      "font-family": "Helvetica Neue, sans-serif",
+                      "font-weight": "normal",
+                      "font-size": "15.299999999999999px",
+                      "color": "#4c4c4c"
+                    }
+                  },
+                  "text": {
+                    "button": "Add to cart"
+                  }
+                },
+                "option": {},
+                "cart": {
+                  "styles": {
+                    "button": {
+                      ":hover": {
+                        "background-color": "#0c4479"
+                      },
+                      "background-color": "#072847",
+                      ":focus": {
+                        "background-color": "#0c4479"
+                      }
+                    }
+                  },
+                  "text": {
+                    "total": "Subtotal",
+                    "button": "Checkout"
+                  }
+                },
+                "toggle": {
+                  "styles": {
+                    "toggle": {
+                      "background-color": "#072847",
+                      ":hover": {
+                        "background-color": "#0c4479"
+                      },
+                      ":focus": {
+                        "background-color": "#0c4479"
+                      }
+                    }
+                  }
+                }
+              },
+            });
+          });
+        }
+      })();
+      /*]]>*/
+  </script> 
 </section>
-
+ 
