--- a/src/styles/scss/_contact.scss
+++ b/src/styles/scss/_contact.scss
@@ -1,111 +1,37 @@
 .contact {
   position: relative;
-  overflow: hidden;
-  padding-top: 20vh;
-  height: clamp(500px, 100vh, 1080px); 
- 
-
-  .socials {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 32px;
-
-    width: fit-content;
-    margin-top: 32px;
-
-    @media (max-width: 1480px) {
-      width: 80%;
-    }
-
-    @media (max-width: 1128px) {
-      width: 100%;
-    }
-
-    a {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 64px;
-      height: 64px;
-
-      border-radius: 999px;
-      border: 1px solid $color-orange;
-      transition-duration: 0.35s;
-      cursor: pointer;
-
-      @media (max-width: 480px) {
-        width: 4rem;
-        height: 4rem;
-      }
-
-      svg {
-        path {
-          transition-duration: 0.35s;
-        }
-      }
-
-      &:hover {
-        background-color: $color-orange;
-
-        svg {
-          path {
-            stroke: #fff;
-          }
-        }
-      }
-    }
-  } 
-}
-
-.contact {
+  overflow: hidden; 
   background-color: #102d41;
+
+  .container {
+    justify-content: center;
+  } 
+
+  .row {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+  }
+
+  h3 {
+    margin: 0 !important;
+  }
 }
-.container {
-  justify-content: flex-start;
-} 
+ 
 .contact__links { 
   right: 10%;
   bottom: 0%;
   max-width: 400px;
 
-  a {
-    margin-top: 2rem;
-    display: block;
-  }
-}
-.contact__info {
-  position: relative;
-  width: 100%; 
-  margin: 0; 
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start; 
-
-  z-index: 10;
- 
-}
-
-.contact__phrase {
-  span {
-    display: block;
-
-    &:nth-child(1) {
-      line-height: 0.85;
-    }
-  }
-}
-
-.contact__links { 
   p { 
     color: var(--color-orange); 
   }
 
   a {
-    color: var(--color-link);
+    display: block; 
+    margin-top: 2rem;
+     
     color: var(--color-orange);
     text-decoration: none;
     transition: 0.35s;
