refactor: update About, How, and Intro sections for improved content structure and styling; replace section paragraph classes and enhance image handling

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -9,7 +9,7 @@
         <span class="asterisk">*</span>The best ideas 
         <br />know no bounds.
       </h3>
-      <p class="section__p">They flood our thoughts, ignite our emotions and build enough momentum to change the way we act. Ideas that flow are what the modern marketer needs to thrive.      </p>
+      <p>They flood our thoughts, ignite our emotions and build enough momentum to change the way we act. Ideas that flow are what the modern marketer needs to thrive.      </p>
     </div> 
     <div class="container about__team">
       <div class="team"> 
