--- a/src/components/sections/Intro.astro
+++ b/src/components/sections/Intro.astro
@@ -9,6 +9,9 @@
         <span class="asterisk">*</span>Hot Lava is our phrase for epiphany. We had one and that’s why we’re here...
       </h3> 
     </div>
+    <div class="image-phrase">
+      <img src="/images/phrase.jpg" alt="Hot Lava is our phrase for epiphany.">
+    </div>
   </div>
 </section>
 <section class="intro intro-second">
@@ -20,7 +23,9 @@
         <br />flow more freely.
       </h3>
       <div class="row">
-        <img src="/images/flow.jpg" alt="Ideas need to flow more freely.">
+        <div class="image-ideas">
+          <img src="/images/flow.jpg" alt="Ideas need to flow more freely.">
+        </div> 
         <p class="section__p paragraph-intro"> It’s never been more important. With the complexities of today’s marketing challenges, ideas need to flow freely to be effective across audiences, platforms and cultures.
         </p>
       </div>
@@ -34,61 +39,11 @@
         <span class="asterisk">*</span>Flow starts with
         <br />the way we work.
       </h3>
-      <p class="section__p">We're a full-service advertising agency that gives
+      <p>We're a full-service advertising agency that gives
         clients direct access to award-winning creators and doers. Our team is
         simply an extension of yours – with personal service, an agile approach,
         and effective, defining work.
       </p>
     </div> 
   </div>
-</section>
-
-
-<style type="text/scss">
-  .intro-first {
-    background: linear-gradient(to bottom, var(--color-orange), var(--color-yellow));
-  }
-
-  .intro-second {
-    background: var(--color-turquoise);
-  }
-  
-  .intro-third {
-    background: var(--color-orange);
-  }
-  
-  .intro-first{
-    .title {
-      @media (min-width: 1024px) {
-        max-width: 70%;
-      }
-    }
-  }
-
-  .intro-second, 
-  .intro-third  {
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: center; 
-    }
-  }
-  .intro-third {
-    .container { 
-      align-items: flex-end;
-    }
-  }
-
-  .row {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
-    gap: 4rem;
-  }
-
-  .row img {
-    width: 100%;
-  }
-</style>
+</section> 
