--- a/src/styles/scss/_works.scss
+++ b/src/styles/scss/_works.scss
@@ -74,16 +74,21 @@
   padding-bottom: 20vh;
 }
 
-.brands {
-  width: 100%;
+.brands { 
+  width: 65vw;
   padding-top: 10vh;
 
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 2rem;
   row-gap: 4rem;
-  align-items: center;
+  align-items: center; 
 
+  @media (max-width: 1023px) {
+    width: 80%;
+    margin: 0 auto;
+    grid-template-columns: repeat(2, 1fr);
+  }
 
   img {
     max-width: 100%;
@@ -91,12 +96,6 @@
     height: auto;
     object-fit: contain;
     justify-self: center;
-  }
-
-  @media (max-width: 1023px) {
-    width: 80%;
-    margin: 0 auto;
-    grid-template-columns: repeat(2, 1fr);
   }
   
 }
