refactor: update package dependencies, enhance navigation links, and improve GSAP animations for better performance and responsiveness

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,7 @@
   <div class="desktop">
     <ul class="navbar">
       <li><a class="about-link" href="#about">ABOUT</a></li> 
-      <li><a class="how-we-work-link" href="#how-we-work">HOW WE WORK</a></li>
+      <li><a class="how-we-work-link" href="#work">HOW WE WORK</a></li>
       <li><a class="shop-link" href="#shop">SHOP</a></li>
       <li><a class="contact-link" href="#contact">CONTACT</a></li>
     </ul>
@@ -30,7 +30,7 @@
     <div class="nav">
       <ul>
         <li><a class="about-link" href="#about-us">ABOUT</a></li>
-        <li><a class="our-way-link" href="#how-we-work">HOW WE WORK</a></li>
+        <li><a class="how-we-work-link" href="#work">HOW WE WORK</a></li>
         <li><a class="shop-link" href="#shop">SHOP</a></li>
         <li><a class="contact-link" href="#contact">CONTACT</a></li>
       </ul>
