--- a/src/styles/scss/_contact.scss
+++ b/src/styles/scss/_contact.scss
@@ -1,6 +1,9 @@
+@use './vars' as *;
+
 .contact {
   position: relative;
-  overflow: hidden; 
+  overflow: hidden;
+  padding-top: 20vh;  
   background-color: #102d41;
 
   .container {
