style: clean up unused images and adjust section colors - remove unused image elements from About, Products, and Shop sections - comment out background color in Shop SCSS for future adjustments - update section colors for consistency across the application

--- a/src/components/sections/Shop.astro
+++ b/src/components/sections/Shop.astro
@@ -4,7 +4,7 @@
 
 <section class="shop" id="shop">
   <div class="shop__hero">
-    <img src="/images/shop.jpg" alt="Lava Shop">
+    <!-- <img src="/images/shop.jpg" alt="Lava Shop"> -->
   </div>
   <div id="collection-component-1745937952726"></div>
   <script is:inline type="text/javascript"> 
