--- a/src/styles/scss/_menu.scss
+++ b/src/styles/scss/_menu.scss
@@ -10,10 +10,10 @@
     // z-index: 998;
     // height: 100vh;
 
-    border-left: 1px solid rgba(255, 255, 255, 0.25);
+    // border-left: 1px solid rgba(255, 255, 255, 0.25);
 
     // background: rgba(255, 255, 255, 0.1) !important;
-    backdrop-filter: blur(20px);
+    // backdrop-filter: blur(20px);
 
     // left: 0;
 
