style: update Intro section layout and styles - replace duplicate image-phrase div with a single instance - adjust alignment of container elements in the first intro section - reposition image-phrase to the left for better visual balance - update last update check timestamp in settings

--- a/src/styles/scss/_intro.scss
+++ b/src/styles/scss/_intro.scss
@@ -27,6 +27,9 @@
 
 .intro-first {
   // background: linear-gradient(to bottom, var(--color-orange), var(--color-yellow));
+  .container {
+    align-items: flex-end;
+  }
 }
 
 .intro-second {
@@ -65,7 +68,7 @@
 .image-phrase {
   position: absolute; 
   top: 20%;
-  right: 5%;
+  left: 0%;
   width: 47vw;
   height: auto;
   aspect-ratio: 4/3;
