style: update About section content and team layout - change title to "Who we are" for clarity - add multiple team member cards for enhanced team representation

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -6,13 +6,30 @@
   <div class="wrapper">
     <div class="container about__intro">
       <h3 class="title">
-        <span class="asterisk">*</span>The best ideas 
-        <br />know no bounds.
+        <span class="asterisk">*</span>Who we are
       </h3>
-      <p class="paragraph">They flood our thoughts, ignite our emotions and build enough momentum to change the way we act. Ideas that flow are what the modern marketer needs to thrive.      </p>
+      <p class="paragraph">They flood our thoughts, ignite our emotions and build enough momentum to change the way we act. Ideas that flow are what the modern marketer needs to thrive.</p>
     </div> 
     <div class="container about__team">
       <div class="team"> 
+
+        <div class="team__card">  
+          <picture>
+            <img src="./images/team-kristi.png" alt="Kristi" data-critical="true" loading="eager" />
+          </picture>
+        </div>
+
+        <div class="team__card">  
+          <picture>
+            <img src="./images/team-kristi.png" alt="Kristi" data-critical="true" loading="eager" />
+          </picture>
+        </div>
+
+        <div class="team__card">  
+          <picture>
+            <img src="./images/team-kristi.png" alt="Kristi" data-critical="true" loading="eager" />
+          </picture>
+        </div>
 
         <div class="team__card">  
           <picture>
