style: update navigation and layout adjustments across components - replace navigation links for improved clarity and consistency - adjust team layout styles for better alignment and spacing - modify copyright and hero styles for enhanced visual presentation - refine intro and menu styles for improved responsiveness and layout

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,10 +5,11 @@
 <nav class="menu" id="home">
   <div class="desktop">
     <ul class="navbar">
-      <li><a class="about-link" href="#about">ABOUT</a></li> 
-      <li><a class="how-we-work-link" href="#work">HOW WE WORK</a></li>
-      <li><a class="shop-link" href="#shop">SHOP</a></li>
-      <li><a class="contact-link" href="#contact">CONTACT</a></li>
+      <li><a class="home-link" href="#home">Home</a></li> 
+      <li><a class="about-link" href="#about">About</a></li> 
+      <li><a class="how-we-work-link" href="#work">Works</a></li>
+      <li><a class="shop-link" href="#shop">Shop</a></li>
+      <li><a class="contact-link" href="#contact">Contact</a></li>
     </ul>
   </div>
 
