--- a/src/styles/scss/_about.scss
+++ b/src/styles/scss/_about.scss
@@ -11,8 +11,7 @@
   }
  
   .logo {
-    bottom: 15%;
-    left: 4%; 
+    bottom: 33%; 
   }
 }
 
@@ -30,25 +29,31 @@
 }
 
 .team { 
-  // display: flex;
-  // flex-direction: column;
-  // align-items: flex-start;
-  // justify-content: flex-start; 
-  // gap: 10vh;
-  // margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start; 
+  gap: 5vh;
+  margin: 0 auto;
  
   width: 90%;
-  text-align: right;
-  display: flex;
-  justify-content: end;
-  align-items: flex-start;
-  padding-top: 10vh;
+  padding-top: 10vh; 
+
+    @media (min-width: $change-layout) {
+      align-items: flex-end;
+      gap: 0;
+    }
 }
 
 .team__card {
   position: relative; 
   width: fit-content; 
 
+  &:nth-child(even) {
+    @media (min-width: $change-layout) {
+      transform: translateX(-100%);
+    }
+  }
 
   picture {
     display: block;
