--- a/src/styles/scss/_copyright.scss
+++ b/src/styles/scss/_copyright.scss
@@ -32,7 +32,7 @@
   }
 
   .desktop {
-    display: inline;
+    display: inline-block;
   }
 
   .mobile {
@@ -63,5 +63,9 @@
     letter-spacing: 0.01em;
     margin: 0;
     opacity: .5;
+
+
+    transform: rotate(180deg) translateX(-100px);
+    transform-origin: left;
   }
 }
