--- a/src/styles/scss/_works.scss
+++ b/src/styles/scss/_works.scss
@@ -14,6 +14,9 @@
   padding: 10vh 0; 
   justify-content: center;
   gap: 1rem; 
+  
+
+  max-width: 800px;
 
 } 
 
@@ -75,7 +78,7 @@
 }
 
 .brands { 
-  width: 65vw;
+  width: 100%;
   padding-top: 10vh;
 
   display: grid;
